syntax = "proto3";
option go_package="proto.national.economy.sector.old";

service NationalEconomySectorOldService {
  rpc List(ListNationalEconomySectorOldRequest) returns (ListNationalEconomySectorOldResponse);
  rpc Create(CreateNationalEconomySectorOldRequest) returns (NationalEconomySectorOldProfileResponse);
  rpc Get(SingleNationalEconomySectorOldRequest) returns (NationalEconomySectorOldProfileResponse);
  rpc Update(UpdateNationalEconomySectorOldRequest) returns (NationalEconomySectorOldSuccessResponse);
  rpc Delete(SingleNationalEconomySectorOldRequest) returns (NationalEconomySectorOldSuccessResponse);
}

message ListNationalEconomySectorOldRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListNationalEconomySectorOldResponse {
  repeated NationalEconomySectorOldProfileResponse old_national_economy_sectors = 1;
}

message CreateNationalEconomySectorOldRequest{
  string code = 1;
  string name = 2;
  int64 cbu_code = 3;
  int64 cbu_group_code = 4;
  string activation_date = 5;
  string deactivation_date = 6;
  int32 cbu_reference_key = 7;
  string flex_fin_id = 8;
}

message SingleNationalEconomySectorOldRequest{
  oneof old_national_economy_sector_identifier {
    string id = 1;
    string code = 2;
  }
}

message NationalEconomySectorOldProfileResponse{
  string id = 1;
  string code = 2;
  string name = 3;
  int64 cbu_code = 4;
  int64 cbu_group_code = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  string flex_fin_id = 9;
  string deleted_at = 10;
}

message NationalEconomySectorOldSuccessResponse{
  string response = 1;
}

message UpdateNationalEconomySectorOldRequest{
  string id = 1;
  string code = 2;
  string name = 3;
  int64 cbu_code = 4;
  int64 cbu_group_code = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  string flex_fin_id = 9;
}